--- a/app/public/home.html
+++ b/app/public/home.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Home Page</title>
+    <link rel="stylesheet" href="homestyle.css" />
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   </head>
   <body>
+    <h1>Welcome!</h1>
     <h1>Welcome!</h1>
   </body>
 </html>
