feat: add survey to survey page

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -15,6 +15,150 @@
     />
   </head>
   <body>
-    <h1>Welcome, Test</h1>
+    <h1>
+      Fill out this quick survey to be matched with one of the Sopranos
+      Characters. An answer of 0 would mean you disagree while 5 would mean you
+      strongly agree.
+    </h1>
+    <form>
+      <div class="form-group">
+        <input
+          id="name"
+          type="text"
+          class="form-control"
+          placeholder="Name (Required)"
+        />
+      </div>
+      <div class="form-group">
+        <input
+          id="photo"
+          type="text"
+          class="form-control"
+          placeholder="Link to Profile Photo (Required)"
+        />
+      </div>
+      <div class="form-group">
+        <label for="question1">I think it's ok to talk to a Psychiatrist</label>
+        <select class="form-control" id="question1">
+          <option value="empty"></option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="question2"
+          >If I got in trouble, I would cooperate with the FBI</label
+        >
+        <select class="form-control" id="question2">
+          <option value="empty"></option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="question3"
+          >I have aspirations outside of organized crime, such as producing
+          films</label
+        >
+        <select class="form-control" id="question3">
+          <option value="empty"></option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="question4"
+          >I would like to be Boss if anything were to happen to Tony</label
+        >
+        <select class="form-control" id="question4">
+          <option value="empty"></option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="question5"
+          >I believe in the supernatural and the afterlife</label
+        >
+        <select class="form-control" id="question5">
+          <option value="empty"></option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="question6">I consider myself as aggresive</label>
+        <select class="form-control" id="question6">
+          <option value="empty"></option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="question7">I think highly of myself</label>
+        <select class="form-control" id="question7">
+          <option value="empty"></option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="question8">I am good with money.</label>
+        <select class="form-control" id="question8">
+          <option value="empty"></option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="question9">I work out at the gym often.</label>
+        <select class="form-control" id="question9">
+          <option value="empty"></option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="question10"
+          >Sometimes I find myself down in funds due to degenerate
+          gambling</label
+        >
+        <select class="form-control" id="question10">
+          <option value="empty"></option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+      </div>
+    </form>
   </body>
 </html>
