--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -160,5 +160,10 @@
         </select>
       </div>
     </form>
+    <div class="text-center">
+      <button id="submitBtn" type="submit" class="btn btn-success btn-lg">
+        Submit
+      </button>
+    </div>
   </body>
 </html>
