--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -15,14 +15,12 @@
     />
   </head>
   <body>
-    <h1>
-      Fill out this quick survey to be matched with one of the Sopranos
-      Characters. An answer of 0 would mean you disagree while 5 would mean you
-      strongly agree.
-    </h1>
+    
     <div class="container content">
       <h1>Survey</h1>
-      <p>Take a quick survey to find your perfect match! These questions are answered by the numbers 1 through 5. If you really, really disagree with the statement, your answer would be 1. If you find a statement to hit extremely close to home, put in a 5.</p>
+      <p>Fill out this quick survey to be matched with one of the Sopranos
+        Characters. An answer of 0 would mean you disagree while 5 would mean you
+        strongly agree.</p>
     <form>
       <div class="form-group">
         <input
