style: text center in modal

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -169,9 +169,9 @@
     <div id="bestFriendModal" class="modal" role="dialog">
 			<div class="modal-dialog">
 				<div class="modal-content">
-					<div class="modal-header">
+					<div class="modal-header d-block">
 						<button type="button" class="close" data-dismiss="modal">&times;</button>
-						<h3 class="modal-title">Your New Best Friend</h1>
+						<h3 class="modal-title text-center">Your New Best Friend</h1>
 					</div>
 					<div class="modal-body">
 						<h2 id="bestFriend"></h2>
