style: best friend name txt center

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -173,9 +173,9 @@
 						<button type="button" class="close" data-dismiss="modal">&times;</button>
 						<h3 class="modal-title text-center">Your New Best Friend</h1>
 					</div>
-					<div class="modal-body">
-						<h2 id="bestFriend"></h2>
-						<img id="bestFriendPhoto" src="#">
+					<div class="modal-body d-block">
+						<h2 id="bestFriend" class = "text-center"></h2>
+						<img id="bestFriendPhoto" class = "text-center" src="#">
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
