--- a/app/public/home.html
+++ b/app/public/home.html
@@ -26,7 +26,9 @@
         It uses utility classes for typography and spacing to space content out
         within the larger container.
       </p>
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+      <a class="btn btn-primary btn-lg" href="survey.html" role="button"
+        >Learn more</a
+      >
     </div>
   </body>
 </html>
