--- a/app/public/home.html
+++ b/app/public/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Home Page</title>
-    <link rel="stylesheet" href="homestyle.css" />
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <link
       rel="stylesheet"
@@ -16,19 +16,21 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1 class="display-4">Hello, world!</h1>
+      <h1 class="display-4">Express Friend-Fiender: Columbia University</h1>
       <p class="lead">
-        This is a simple hero unit, a simple jumbotron-style component for
-        calling extra attention to featured content or information.
+        This is a full stack web application that uses Node.js, jQuery, AJAX,
+        Bootstrap, and Express. Web Servers are made with Node.js and express
+        and styling is done through Bootstrap.
       </p>
       <hr class="my-4" />
       <p>
-        It uses utility classes for typography and spacing to space content out
-        within the larger container.
+        By filling out the survey, you will be matched with one of the main
+        Sopranos characters.
       </p>
       <a class="btn btn-primary btn-lg" href="survey.html" role="button"
-        >Learn more</a
+        >Take Survey!</a
       >
     </div>
   </body>
 </html>
+<link rel="stylesheet" href="homestyle.css" />
