--- a/app/public/home.html
+++ b/app/public/home.html
@@ -28,7 +28,7 @@
         Sopranos characters.
       </p>
       <a class="btn btn-primary btn-lg" href="survey.html" role="button"
-        >Take Survey!</a
+        >Take Survey!!</a
       >
     </div>
   </body>
